IP-2415: fix overlap GT bar

--- a/src/components/search-results/style.scss
+++ b/src/components/search-results/style.scss
@@ -16,13 +16,6 @@
   }
 }
 .search-result-wrapper {
-  > .skiptranslate {
-    margin-top: -39px;
-    iframe.skiptranslate {
-      @extend .position-absolute;
-      top: 0;
-    }
-  }
   @include media-breakpoint-up(xl) {
     overflow-y: hidden;
   }
